# local-context-engine

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: release.yml
examples/sample-output/: agent-context.md  file-index.json  repo-map.json
examples/sample-output/tasks/add-jwt-auth/: agent-prompt.md  relevant-files.json  task-context.md
lce/: main.py
lce/analyzers/: generic_analyzer.py  javascript_analyzer.py  python_analyzer.py
lce/cli/: doctor_cmd.py  init_cmd.py  prompt_cmd.py  scan_cmd.py  spec_cmd.py  task_cmd.py  update_cmd.py
lce/generators/: agent_context_generator.py  file_index_generator.py  prompt_generator.py  repo_map_generator.py  spec_generator.py  task_context_generator.py  update_generator.py
lce/models/: context_models.py
lce/scanner/: file_scanner.py  ignore_rules.py  language_detector.py  scan_config.py
lce/store/: context_store.py
lce/utils/: file_utils.py
tests/: test_generators.py  test_language_detector.py  test_safe_scan_cli.py  test_scanner.py  test_spec_cli.py  test_task_cli.py  test_task_context.py  test_update.py
