[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-context-engine"
version = "1.2.0"
description = "A Python CLI that generates deterministic local context files for AI coding agents."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Local Context Engine contributors" }]
dependencies = [
    "pydantic>=2.7",
    "rich>=13.7",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
    "build>=1.2",
    "python-semantic-release>=9.8",
]

[project.scripts]
lce = "lce.main:app"

[tool.hatch.build.targets.wheel]
packages = ["lce"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "python -m build"
upload_to_pypi = false
upload_to_release = true
commit_message = "chore(release): {version}"
tag_format = "v{version}"
